// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The MobileSaveForLater stack matches the snapshot 1`] = `
Object {
  "Description": "Implements save for later for mobile",
  "Mappings": Object {
    "StageVariables": Object {
      "CODE": Object {
        "TableReadCapacity": 1,
        "TableWriteCapacity": 1,
      },
      "PROD": Object {
        "TableReadCapacity": 200,
        "TableWriteCapacity": 75,
      },
    },
  },
  "Outputs": Object {
    "RestApiEndpoint0551178A": Object {
      "Value": Object {
        "Fn::Join": Array [
          "",
          Array [
            "https://",
            Object {
              "Ref": "RestApi0C43BF4B",
            },
            ".execute-api.",
            Object {
              "Ref": "AWS::Region",
            },
            ".",
            Object {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            Object {
              "Ref": "RestApiDeploymentStageprod3855DE66",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": Object {
    "App": Object {
      "Default": "mobile-save-for-later",
      "Description": "Application name",
      "Type": "String",
    },
    "DistributionBucketName": Object {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "DynamoNotificationTopic": Object {
      "Description": "SNS topic to notify when there's a dynamo throttling event",
      "Type": "String",
    },
    "Stage": Object {
      "AllowedValues": Array [
        "CODE",
        "PROD",
      ],
      "Description": "Stage name",
      "Type": "String",
    },
  },
  "Resources": Object {
    "ApiDomainName": Object {
      "Properties": Object {
        "CertificateArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:aws:acm:us-east-1:",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":certificate/0ee21f37-ec53-437c-b572-3c9d294ab749",
            ],
          ],
        },
        "DomainName": "mobile-save-for-later.mobile-aws.code.dev-guardianapis.com",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "ApiMapping": Object {
      "Properties": Object {
        "DomainName": Object {
          "Ref": "ApiDomainName",
        },
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
        "Stage": Object {
          "Ref": "RestApiDeploymentStageprod3855DE66",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "ApiRoute53": Object {
      "Properties": Object {
        "HostedZoneId": "Z6PRU8YR6TQDK",
        "RecordSets": Array [
          Object {
            "AliasTarget": Object {
              "DNSName": Object {
                "Fn::GetAtt": Array [
                  "ApiDomainName",
                  "DistributionDomainName",
                ],
              },
              "HostedZoneId": "Z2FDTNDATAQYW2",
            },
            "Name": "mobile-save-for-later.mobile-aws.code.dev-guardianapis.com",
            "Type": "A",
          },
        ],
      },
      "Type": "AWS::Route53::RecordSetGroup",
    },
    "RestApi0C43BF4B": Object {
      "Properties": Object {
        "Name": "mobile-save-for-later-api-CODE",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "RestApiAccount7C83CF5A": Object {
      "DependsOn": Array [
        "RestApi0C43BF4B",
      ],
      "Properties": Object {
        "CloudWatchRoleArn": Object {
          "Fn::GetAtt": Array [
            "RestApiCloudWatchRoleE3ED6605",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
    },
    "RestApiCloudWatchRoleE3ED6605": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "RestApiDeployment180EC5035ed39622d7840f196ed35b5345f76c92": Object {
      "DependsOn": Array [
        "RestApisyncedPrefsmeGET26EA27DA",
        "RestApisyncedPrefsme43E29A67",
        "RestApisyncedPrefsmesavedArticlesPOST431289B1",
        "RestApisyncedPrefsmesavedArticles1FBF9E72",
        "RestApisyncedPrefsC6D26086",
      ],
      "Properties": Object {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "RestApiDeploymentStageprod3855DE66": Object {
      "DependsOn": Array [
        "RestApiAccount7C83CF5A",
      ],
      "Properties": Object {
        "DeploymentId": Object {
          "Ref": "RestApiDeployment180EC5035ed39622d7840f196ed35b5345f76c92",
        },
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
        "StageName": "prod",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "RestApisyncedPrefsC6D26086": Object {
      "Properties": Object {
        "ParentId": Object {
          "Fn::GetAtt": Array [
            "RestApi0C43BF4B",
            "RootResourceId",
          ],
        },
        "PathPart": "syncedPrefs",
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "RestApisyncedPrefsme43E29A67": Object {
      "Properties": Object {
        "ParentId": Object {
          "Ref": "RestApisyncedPrefsC6D26086",
        },
        "PathPart": "me",
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "RestApisyncedPrefsmeGET26EA27DA": Object {
      "Properties": Object {
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": Object {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                Object {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                Object {
                  "Fn::GetAtt": Array [
                    "fetcharticleslambda4E2BF026",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": Object {
          "Ref": "RestApisyncedPrefsme43E29A67",
        },
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "RestApisyncedPrefsmeGETApiPermissionMobileSaveForLaterCODERestApi17248814GETsyncedPrefsme8119A20D": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "fetcharticleslambda4E2BF026",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              Object {
                "Ref": "AWS::Region",
              },
              ":",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":",
              Object {
                "Ref": "RestApi0C43BF4B",
              },
              "/",
              Object {
                "Ref": "RestApiDeploymentStageprod3855DE66",
              },
              "/GET/syncedPrefs/me",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "RestApisyncedPrefsmeGETApiPermissionTestMobileSaveForLaterCODERestApi17248814GETsyncedPrefsme36E6A8D1": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "fetcharticleslambda4E2BF026",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              Object {
                "Ref": "AWS::Region",
              },
              ":",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":",
              Object {
                "Ref": "RestApi0C43BF4B",
              },
              "/test-invoke-stage/GET/syncedPrefs/me",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "RestApisyncedPrefsmesavedArticles1FBF9E72": Object {
      "Properties": Object {
        "ParentId": Object {
          "Ref": "RestApisyncedPrefsme43E29A67",
        },
        "PathPart": "savedArticles",
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "RestApisyncedPrefsmesavedArticlesPOST431289B1": Object {
      "Properties": Object {
        "AuthorizationType": "NONE",
        "HttpMethod": "POST",
        "Integration": Object {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                Object {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                Object {
                  "Fn::GetAtt": Array [
                    "savearticleslambda95B3C5F6",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": Object {
          "Ref": "RestApisyncedPrefsmesavedArticles1FBF9E72",
        },
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "RestApisyncedPrefsmesavedArticlesPOSTApiPermissionMobileSaveForLaterCODERestApi17248814POSTsyncedPrefsmesavedArticlesF9771EF1": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "savearticleslambda95B3C5F6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              Object {
                "Ref": "AWS::Region",
              },
              ":",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":",
              Object {
                "Ref": "RestApi0C43BF4B",
              },
              "/",
              Object {
                "Ref": "RestApiDeploymentStageprod3855DE66",
              },
              "/POST/syncedPrefs/me/savedArticles",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "RestApisyncedPrefsmesavedArticlesPOSTApiPermissionTestMobileSaveForLaterCODERestApi17248814POSTsyncedPrefsmesavedArticles7BBB5472": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "savearticleslambda95B3C5F6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              Object {
                "Ref": "AWS::Region",
              },
              ":",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":",
              Object {
                "Ref": "RestApi0C43BF4B",
              },
              "/test-invoke-stage/POST/syncedPrefs/me/savedArticles",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "SaveForLaterDynamoTable": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AttributeDefinitions": Array [
          Object {
            "AttributeName": "userId",
            "AttributeType": "S",
          },
        ],
        "KeySchema": Array [
          Object {
            "AttributeName": "userId",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": Object {
          "ReadCapacityUnits": Object {
            "Fn::FindInMap": Array [
              "StageVariables",
              Object {
                "Ref": "Stage",
              },
              "TableReadCapacity",
            ],
          },
          "WriteCapacityUnits": Object {
            "Fn::FindInMap": Array [
              "StageVariables",
              Object {
                "Ref": "Stage",
              },
              "TableWriteCapacity",
            ],
          },
        },
        "TableName": Object {
          "Fn::Sub": "\${App}-\${Stage}-articles",
        },
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::DynamoDB::Table",
    },
    "fetcharticleslambda4E2BF026": Object {
      "DependsOn": Array [
        "fetcharticleslambdaServiceRoleDefaultPolicy4A85964A",
        "fetcharticleslambdaServiceRoleC5815D5D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "mobile/CODE/mobile-save-for-later/mobile-save-for-later.jar",
        },
        "Environment": Object {
          "Variables": Object {
            "APP": "mobile-save-for-later",
            "App": "mobile-save-for-later",
            "IdentityApiHost": "https://id.code.dev-guardianapis.com",
            "IdentityOktaAudience": "https://profile.code.dev-theguardian.com/",
            "IdentityOktaIssuerUrl": "https://profile.code.dev-theguardian.com/oauth2/aus3v9gla95Toj0EE0x7",
            "STACK": "mobile",
            "STAGE": "CODE",
            "Stack": "mobile",
            "Stage": "CODE",
          },
        },
        "FunctionName": "mobile-save-for-later-FETCH-cdk-CODE",
        "Handler": "com.gu.sfl.lambda.FetchArticlesLambda::handleRequest",
        "MemorySize": 1024,
        "ReservedConcurrentExecutions": 1,
        "Role": Object {
          "Fn::GetAtt": Array [
            "fetcharticleslambdaServiceRoleC5815D5D",
            "Arn",
          ],
        },
        "Runtime": "java8",
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-save-for-later",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 20,
      },
      "Type": "AWS::Lambda::Function",
    },
    "fetcharticleslambdaServiceRoleC5815D5D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-save-for-later",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "fetcharticleslambdaServiceRoleDefaultPolicy4A85964A": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      Object {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      Object {
                        "Ref": "DistributionBucketName",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:ssm:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/mobile/mobile-save-for-later",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:ssm:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/mobile/mobile-save-for-later/*",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "dynamodb:GetItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:Query",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "SaveForLaterDynamoTable",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "fetcharticleslambdaServiceRoleDefaultPolicy4A85964A",
        "Roles": Array [
          Object {
            "Ref": "fetcharticleslambdaServiceRoleC5815D5D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "savearticleslambda95B3C5F6": Object {
      "DependsOn": Array [
        "savearticleslambdaServiceRoleDefaultPolicy6E40CEA9",
        "savearticleslambdaServiceRole0DD4D7BB",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "mobile/CODE/mobile-save-for-later/mobile-save-for-later.jar",
        },
        "Environment": Object {
          "Variables": Object {
            "APP": "mobile-save-for-later",
            "App": "mobile-save-for-later",
            "IdentityApiHost": "https://id.code.dev-guardianapis.com",
            "IdentityOktaAudience": "https://profile.code.dev-theguardian.com/",
            "IdentityOktaIssuerUrl": "https://profile.code.dev-theguardian.com/oauth2/aus3v9gla95Toj0EE0x7",
            "STACK": "mobile",
            "STAGE": "CODE",
            "SavedArticleLimit": "1000",
            "Stack": "mobile",
            "Stage": "CODE",
          },
        },
        "FunctionName": "mobile-save-for-later-SAVE-cdk-CODE",
        "Handler": "com.gu.sfl.lambda.SaveArticlesLambda::handleRequest",
        "MemorySize": 1024,
        "Role": Object {
          "Fn::GetAtt": Array [
            "savearticleslambdaServiceRole0DD4D7BB",
            "Arn",
          ],
        },
        "Runtime": "java8",
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-save-for-later",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "savearticleslambdaServiceRole0DD4D7BB": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-save-for-later",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "savearticleslambdaServiceRoleDefaultPolicy6E40CEA9": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      Object {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      Object {
                        "Ref": "DistributionBucketName",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:ssm:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/mobile/mobile-save-for-later",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:ssm:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/mobile/mobile-save-for-later/*",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "dynamodb:GetItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:Query",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "SaveForLaterDynamoTable",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "savearticleslambdaServiceRoleDefaultPolicy6E40CEA9",
        "Roles": Array [
          Object {
            "Ref": "savearticleslambdaServiceRole0DD4D7BB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`The MobileSaveForLater stack matches the snapshot 2`] = `
Object {
  "Description": "Implements save for later for mobile",
  "Mappings": Object {
    "StageVariables": Object {
      "CODE": Object {
        "TableReadCapacity": 1,
        "TableWriteCapacity": 1,
      },
      "PROD": Object {
        "TableReadCapacity": 200,
        "TableWriteCapacity": 75,
      },
    },
  },
  "Outputs": Object {
    "RestApiEndpoint0551178A": Object {
      "Value": Object {
        "Fn::Join": Array [
          "",
          Array [
            "https://",
            Object {
              "Ref": "RestApi0C43BF4B",
            },
            ".execute-api.",
            Object {
              "Ref": "AWS::Region",
            },
            ".",
            Object {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            Object {
              "Ref": "RestApiDeploymentStageprod3855DE66",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": Object {
    "App": Object {
      "Default": "mobile-save-for-later",
      "Description": "Application name",
      "Type": "String",
    },
    "DistributionBucketName": Object {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "DynamoNotificationTopic": Object {
      "Description": "SNS topic to notify when there's a dynamo throttling event",
      "Type": "String",
    },
    "Stage": Object {
      "AllowedValues": Array [
        "CODE",
        "PROD",
      ],
      "Description": "Stage name",
      "Type": "String",
    },
  },
  "Resources": Object {
    "ApiDomainName": Object {
      "Properties": Object {
        "CertificateArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:aws:acm:us-east-1:",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b4c2902a-fc80-47a9-88b7-7810b88e7e26",
            ],
          ],
        },
        "DomainName": "mobile-save-for-later.mobile-aws.guardianapis.com",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "ApiGatewayHigh5xxPercentageAlarmMobilesaveforlater7A59CCCF": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:aws:sns:",
                Object {
                  "Ref": "AWS::Region",
                },
                ":",
                Object {
                  "Ref": "AWS::AccountId",
                },
                ":mobile-server-side",
              ],
            ],
          },
        ],
        "AlarmDescription": "mobile-save-for-later exceeded 1% error rate",
        "AlarmName": "High 5XX error % from mobile-save-for-later (ApiGateway) in PROD",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "Metrics": Array [
          Object {
            "Expression": "100*m1/m2",
            "Id": "expr_1",
            "Label": "% of 5XX responses served for mobile-save-for-later",
          },
          Object {
            "Id": "m1",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "mobile-save-for-later-api-PROD",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          Object {
            "Id": "m2",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "ApiName",
                    "Value": "mobile-save-for-later-api-PROD",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "SampleCount",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ApiMapping": Object {
      "Properties": Object {
        "DomainName": Object {
          "Ref": "ApiDomainName",
        },
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
        "Stage": Object {
          "Ref": "RestApiDeploymentStageprod3855DE66",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "ApiRoute53": Object {
      "Properties": Object {
        "HostedZoneId": "Z1EYB4AREPXE3B",
        "RecordSets": Array [
          Object {
            "AliasTarget": Object {
              "DNSName": Object {
                "Fn::GetAtt": Array [
                  "ApiDomainName",
                  "DistributionDomainName",
                ],
              },
              "HostedZoneId": "Z2FDTNDATAQYW2",
            },
            "Name": "mobile-save-for-later.mobile-aws.guardianapis.com",
            "Type": "A",
          },
        ],
      },
      "Type": "AWS::Route53::RecordSetGroup",
    },
    "RestApi0C43BF4B": Object {
      "Properties": Object {
        "Name": "mobile-save-for-later-api-PROD",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "RestApiAccount7C83CF5A": Object {
      "DependsOn": Array [
        "RestApi0C43BF4B",
      ],
      "Properties": Object {
        "CloudWatchRoleArn": Object {
          "Fn::GetAtt": Array [
            "RestApiCloudWatchRoleE3ED6605",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
    },
    "RestApiCloudWatchRoleE3ED6605": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "RestApiDeployment180EC503a9713084f6e42c3174f3f6569d53b59c": Object {
      "DependsOn": Array [
        "RestApisyncedPrefsmeGET26EA27DA",
        "RestApisyncedPrefsme43E29A67",
        "RestApisyncedPrefsmesavedArticlesPOST431289B1",
        "RestApisyncedPrefsmesavedArticles1FBF9E72",
        "RestApisyncedPrefsC6D26086",
      ],
      "Properties": Object {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "RestApiDeploymentStageprod3855DE66": Object {
      "DependsOn": Array [
        "RestApiAccount7C83CF5A",
      ],
      "Properties": Object {
        "DeploymentId": Object {
          "Ref": "RestApiDeployment180EC503a9713084f6e42c3174f3f6569d53b59c",
        },
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
        "StageName": "prod",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "RestApisyncedPrefsC6D26086": Object {
      "Properties": Object {
        "ParentId": Object {
          "Fn::GetAtt": Array [
            "RestApi0C43BF4B",
            "RootResourceId",
          ],
        },
        "PathPart": "syncedPrefs",
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "RestApisyncedPrefsme43E29A67": Object {
      "Properties": Object {
        "ParentId": Object {
          "Ref": "RestApisyncedPrefsC6D26086",
        },
        "PathPart": "me",
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "RestApisyncedPrefsmeGET26EA27DA": Object {
      "Properties": Object {
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": Object {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                Object {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                Object {
                  "Fn::GetAtt": Array [
                    "fetcharticleslambda4E2BF026",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": Object {
          "Ref": "RestApisyncedPrefsme43E29A67",
        },
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "RestApisyncedPrefsmeGETApiPermissionMobileSaveForLaterPRODRestApi34373EB6GETsyncedPrefsme64F5DB87": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "fetcharticleslambda4E2BF026",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              Object {
                "Ref": "AWS::Region",
              },
              ":",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":",
              Object {
                "Ref": "RestApi0C43BF4B",
              },
              "/",
              Object {
                "Ref": "RestApiDeploymentStageprod3855DE66",
              },
              "/GET/syncedPrefs/me",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "RestApisyncedPrefsmeGETApiPermissionTestMobileSaveForLaterPRODRestApi34373EB6GETsyncedPrefsmeFCFC8C36": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "fetcharticleslambda4E2BF026",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              Object {
                "Ref": "AWS::Region",
              },
              ":",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":",
              Object {
                "Ref": "RestApi0C43BF4B",
              },
              "/test-invoke-stage/GET/syncedPrefs/me",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "RestApisyncedPrefsmesavedArticles1FBF9E72": Object {
      "Properties": Object {
        "ParentId": Object {
          "Ref": "RestApisyncedPrefsme43E29A67",
        },
        "PathPart": "savedArticles",
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "RestApisyncedPrefsmesavedArticlesPOST431289B1": Object {
      "Properties": Object {
        "AuthorizationType": "NONE",
        "HttpMethod": "POST",
        "Integration": Object {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                Object {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                Object {
                  "Fn::GetAtt": Array [
                    "savearticleslambda95B3C5F6",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": Object {
          "Ref": "RestApisyncedPrefsmesavedArticles1FBF9E72",
        },
        "RestApiId": Object {
          "Ref": "RestApi0C43BF4B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "RestApisyncedPrefsmesavedArticlesPOSTApiPermissionMobileSaveForLaterPRODRestApi34373EB6POSTsyncedPrefsmesavedArticles6E19EABE": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "savearticleslambda95B3C5F6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              Object {
                "Ref": "AWS::Region",
              },
              ":",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":",
              Object {
                "Ref": "RestApi0C43BF4B",
              },
              "/",
              Object {
                "Ref": "RestApiDeploymentStageprod3855DE66",
              },
              "/POST/syncedPrefs/me/savedArticles",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "RestApisyncedPrefsmesavedArticlesPOSTApiPermissionTestMobileSaveForLaterPRODRestApi34373EB6POSTsyncedPrefsmesavedArticles4E00ABB7": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "savearticleslambda95B3C5F6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              Object {
                "Ref": "AWS::Region",
              },
              ":",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":",
              Object {
                "Ref": "RestApi0C43BF4B",
              },
              "/test-invoke-stage/POST/syncedPrefs/me/savedArticles",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "SaveForLaterDynamoTable": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AttributeDefinitions": Array [
          Object {
            "AttributeName": "userId",
            "AttributeType": "S",
          },
        ],
        "KeySchema": Array [
          Object {
            "AttributeName": "userId",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": Object {
          "ReadCapacityUnits": Object {
            "Fn::FindInMap": Array [
              "StageVariables",
              Object {
                "Ref": "Stage",
              },
              "TableReadCapacity",
            ],
          },
          "WriteCapacityUnits": Object {
            "Fn::FindInMap": Array [
              "StageVariables",
              Object {
                "Ref": "Stage",
              },
              "TableWriteCapacity",
            ],
          },
        },
        "TableName": Object {
          "Fn::Sub": "\${App}-\${Stage}-articles",
        },
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::DynamoDB::Table",
    },
    "fetcharticleslambda4E2BF026": Object {
      "DependsOn": Array [
        "fetcharticleslambdaServiceRoleDefaultPolicy4A85964A",
        "fetcharticleslambdaServiceRoleC5815D5D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "mobile/PROD/mobile-save-for-later/mobile-save-for-later.jar",
        },
        "Environment": Object {
          "Variables": Object {
            "APP": "mobile-save-for-later",
            "App": "mobile-save-for-later",
            "IdentityApiHost": "https://id.guardianapis.com",
            "IdentityOktaAudience": "https://profile.theguardian.com/",
            "IdentityOktaIssuerUrl": "https://profile.theguardian.com/oauth2/aus3xgj525jYQRowl417",
            "STACK": "mobile",
            "STAGE": "PROD",
            "Stack": "mobile",
            "Stage": "PROD",
          },
        },
        "FunctionName": "mobile-save-for-later-FETCH-cdk-PROD",
        "Handler": "com.gu.sfl.lambda.FetchArticlesLambda::handleRequest",
        "MemorySize": 1024,
        "ReservedConcurrentExecutions": 300,
        "Role": Object {
          "Fn::GetAtt": Array [
            "fetcharticleslambdaServiceRoleC5815D5D",
            "Arn",
          ],
        },
        "Runtime": "java8",
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-save-for-later",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 20,
      },
      "Type": "AWS::Lambda::Function",
    },
    "fetcharticleslambdaServiceRoleC5815D5D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-save-for-later",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "fetcharticleslambdaServiceRoleDefaultPolicy4A85964A": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      Object {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      Object {
                        "Ref": "DistributionBucketName",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:ssm:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/mobile/mobile-save-for-later",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:ssm:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/mobile/mobile-save-for-later/*",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "dynamodb:GetItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:Query",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "SaveForLaterDynamoTable",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "fetcharticleslambdaServiceRoleDefaultPolicy4A85964A",
        "Roles": Array [
          Object {
            "Ref": "fetcharticleslambdaServiceRoleC5815D5D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "savearticleslambda95B3C5F6": Object {
      "DependsOn": Array [
        "savearticleslambdaServiceRoleDefaultPolicy6E40CEA9",
        "savearticleslambdaServiceRole0DD4D7BB",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "mobile/PROD/mobile-save-for-later/mobile-save-for-later.jar",
        },
        "Environment": Object {
          "Variables": Object {
            "APP": "mobile-save-for-later",
            "App": "mobile-save-for-later",
            "IdentityApiHost": "https://id.guardianapis.com",
            "IdentityOktaAudience": "https://profile.theguardian.com/",
            "IdentityOktaIssuerUrl": "https://profile.theguardian.com/oauth2/aus3xgj525jYQRowl417",
            "STACK": "mobile",
            "STAGE": "PROD",
            "SavedArticleLimit": "1000",
            "Stack": "mobile",
            "Stage": "PROD",
          },
        },
        "FunctionName": "mobile-save-for-later-SAVE-cdk-PROD",
        "Handler": "com.gu.sfl.lambda.SaveArticlesLambda::handleRequest",
        "MemorySize": 1024,
        "Role": Object {
          "Fn::GetAtt": Array [
            "savearticleslambdaServiceRole0DD4D7BB",
            "Arn",
          ],
        },
        "Runtime": "java8",
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-save-for-later",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "savearticleslambdaServiceRole0DD4D7BB": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": Array [
          Object {
            "Key": "App",
            "Value": "mobile-save-for-later",
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/mobile-save-for-later",
          },
          Object {
            "Key": "Stack",
            "Value": "mobile",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "savearticleslambdaServiceRoleDefaultPolicy6E40CEA9": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      Object {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      Object {
                        "Ref": "DistributionBucketName",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:ssm:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/mobile/mobile-save-for-later",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:aws:ssm:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/mobile/mobile-save-for-later/*",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "dynamodb:GetItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:Query",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "SaveForLaterDynamoTable",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "savearticleslambdaServiceRoleDefaultPolicy6E40CEA9",
        "Roles": Array [
          Object {
            "Ref": "savearticleslambdaServiceRole0DD4D7BB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
